--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <section id="galeria" class="content-box fade-in">
             <h2>Galeria</h2>
             <div class="gallery">
-                <img src="/pobrane.jpg" alt="Lokomotywa 1">
-                <img src="/eu200.jpg" alt="Lokomotywa 2">
+                <img src="pobrane.jpg" alt="Lokomotywa 1">
+                <img src="eu200.jpg" alt="Lokomotywa 2">
             </div>
         </section>
 
@@ -206,6 +206,7 @@
     </script>
 </body>
 </html>
+
 
 
 
